my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ECAST/T_ECAST-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ECAST_STRUCT_H
#define T_ECAST_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ECAST(void);


#endif /* not T_ECAST_STRUCT_H */
